--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ ul {
 	font-size: 15px;
 }
 
+/* Scrollspy */
+.scroll-spy {
+	height: 200px;
+	content: "";
+	display: block;
+}
+
 /* About Me*/
 #intro {
 	color: #007BFF;
