--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+	font-family: 'Roboto', sans-serif;
+}
+
 ul {
 	list-style-type: none;
 }
@@ -10,12 +14,13 @@ ul {
 /* Scrollspy */
 #about, #portfolio, #contact {
 	position: relative;
-	margin-top: 200px;
+	margin-top: 150px;
+	padding-top: 80px;
 }
 
 /* Content Spacing */
 .content-spacing {
-	margin-bottom: 300px;
+	padding-bottom: 300px;
 }
 
 /* About Me*/
@@ -46,6 +51,14 @@ ul {
 /* Contact */
 .contact-header h3 {
 	font-weight: bold;
+}
+
+#contact {
+	background: #434343;
+}
+
+.contact-header, footer {
+	color: white;
 }
 
 /* Images */
